--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <!-- Bootstrap CDN -->
-    <title>CSS&SCSS</title>
+    <!-- //<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
+
+    <title>Form</title>
   </head>
   <body>
-
+    <section>
+      <div class="card">
+        <div class="form">
+          <form action="" method="post">
+            <div class="input">
+              <label for="name">Name</label>
+              <input id="name" type="text" class="form-con" />
+            </div>
+            <div class="input">
+              <label for="subject">Subject <span>(Optional)</span></label>
+              <input id="subject" type="text" class="form-con" />
+            </div>
+            <div class="input">
+              <label for="message">Message</label>
+              <textarea name="" id="message" cols="70" rows="10"></textarea>
+            </div>
+            <div class="input input-file">
+              <label for="file">Upload your attachment</label>
+              <span
+                ><img class="upload" src="img/upload.png" alt="upload" /><input
+                  type="file"
+                  class="form-con custom_file"
+              /></span>
+            </div>
+            <div class="input">
+              <button class="btn">Send Feedback</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
